<resources>
    <string name="app_name">Learning Tones</string>
    <string name="welcomeToLearningTones">Welcome to Learning Tones</string>
    <string name="aNote">A</string>
    <string name="asNote">A#/Bb</string>
    <string name="bNote">B</string>
    <string name="cNote">C</string>
    <string name="csNote">C#/Db</string>
    <string name="dNote">D</string>
    <string name="dsNote">D#/Eb</string>
    <string name="eNote">E</string>
    <string name="fNote">F</string>
    <string name="fsNote">F#/Gb</string>
    <string name="gNote">G</string>
    <string name="gsNote">G#/Ab</string>
    <string name="hearAgain">Hear Note Again</string>
    <string name="SelectorScreenButtonSelectionInstructions">Select the Notes\n You Want to be Tested on</string>
    <string name="nameThatTone">Name That Tone</string>
    <string name="nextString">Next</string>
    <string name="submit">Submit</string>
    <string name="nextNote">Next Note</string>
    <string name="start">Start!</string>
    <string name="statsString">Your Stats</string>
    <string name="FinishString">Finish</string>
    <string name="loadingSounds">Loading Sounds</string>
    <string name="youArePlaying">You are playing </string>
    <string name="humThatTone">Hum That Tone</string>
    <string name="nameThatToneExclamationMark">Name That Tone!</string>
    <string name="help">Help?</string>
    <string name="games">Games</string>
    <string name="helpPageText1">If you have any questions, concerns, suggestions, or want to talk about anything please email me at deancampagnolo@gmail.com</string>
    <string name="helpPage">Help Page</string>
    <string name="helpText0">To play a game, click a game on the horizontal scrolling section in the upper half of the Main Menu.</string>
    <string name="backToMainMenu">Back To Main Menu</string>
    <string name="lowerBoundPitch">Lower Bound Pitch</string>
    <string name="upperBoundPitch">Upper Bound Pitch</string>
    <string name="space">&#160;</string>
    <string name="selectAll">Select All</string>
    <string name="deselectAll">Deselect All</string>

</resources>
