<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5f715b"
    tools:context="com.deancampagnolo.learningtones.NameThatTone">

    <TextView
        android:id="@+id/NameThatToneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:fontFamily="casual"
        android:text="@string/nameThatTone"
        android:textColor="@color/orange"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <GridLayout
        android:id="@+id/NTTGridLayout"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:columnCount="3"
        android:columnOrderPreserved="true"
        android:rowCount="4"
        android:rowOrderPreserved="true"
        app:layout_constraintBottom_toTopOf="@+id/adView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <CheckBox
            android:id="@+id/aAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/aNote"
            android:textColor="@color/orange" />

        <CheckBox
            android:id="@+id/asAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/asNote"
            android:textColor="@color/orange" />

        <CheckBox
            android:id="@+id/bAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/bNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/cAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/cNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/csAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/csNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/dAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/dNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/dsAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/dsNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/eAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/eNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/fAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/fNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/fsAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/fsNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/gAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/gNote"
            android:textColor="@color/orange"/>

        <CheckBox
            android:id="@+id/gsAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckBoxClicked"
            android:text="@string/gsNote"
            android:textColor="@color/orange"/>
    </GridLayout>

    <Button
        android:id="@+id/hearAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:onClick="onButtonClicked"
        android:text="@string/hearAgain"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onButtonClicked"
        android:text="@string/submit"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NTTGridLayout" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="placeHolder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/statsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/FinishString"
        app:layout_constraintBottom_toTopOf="@+id/adView2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/FinishString" />
</android.support.constraint.ConstraintLayout>
